# json_config_engine

./: .env.example  .gitignore  Dockerfile  README.md  build_and_upload.py  bump_version.py  docker-compose.yml  invoice_form_v1.json  manifest.in  pyproject.toml  pytest.ini  requirements.txt  setup.sh
msbc_json_config_engine/apps/: __init__.py
msbc_json_config_engine/apps/config_engine/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
msbc_json_config_engine/apps/config_engine/management/commands/: load_oob_config.py
msbc_json_config_engine/apps/config_engine/migrations/: 0001_initial.py  0002_alter_configinstance_unique_together_and_more.py  __init__.py
msbc_json_config_engine/apps/config_engine/templates/admin/config_engine/configinstance/: change_form.html  diff_view.html
msbc_json_config_engine/config/: __init__.py  urls.py  wsgi.py
msbc_json_config_engine/config/settings/: __init__.py  base.py  development.py  production.py
msbc_json_config_engine/scripts/: list_urls.py  reset_db.py  seed_data.py
msbc_json_config_engine/tests/: test_auto_hashing.py  test_config_engine.py  test_oob_constraints.py
